# rag_chatbot

./: .gitignore  Docker-compose.yml  README.md  pyproject.toml
frontend/: Dockerfile
internal_documents/: sample_document.docx  sample_document.pages
server/: Dockerfile  main.py  queries.py  tools.py
